      corresponding Python abstract base classes
    - jythonlib module to simplify usage of Java internals from Python;
      weakref collections now directly use corresponding collections from
      Google Guava and java.util
    - CPython's _json.c was ported to Java to speed up JSON encoding/decoding
    - Upgraded third party libraries
    - Initial support for ensurepip module

  Potentially backwards breaking changes, removing silent errors:

    - remove method on proxied List objects now follows Python
      sematics: a ValueError is raised if the item is not found in the
      java.util.List. In the past, Java semantics were used, with a
      boolean returned indicating if the item was removed or
      not. Given how this interacted with Jython, such remove
      invocations were in the past silent, and perhaps were actually a
      bug.

    - d[key_not_present], if d implement java.util.Map, no longer
      returns None, but raises KeyError, which means this behavior now
      matches standard dict semantics.

    - Abstract methods of an inherited class or interface from Java now raise
      NotImplementedError, instead of returning None (in Java, null) or some
      "zero", if they are not implemented in the extending Python class.

Jython 2.7b3
  Bugs Fixed
    - [ 2225 ] Jython+django-jython - no module named site
    - [ 2108 ] Cannot set attribute to instances of AST/PythonTree (blocks pyflakes)
    - [ 1497 ] ast classes do not have appropiate base classes
    - [ 1980 ] ast.Eq, ast.Gt, ast.GtE, ast.In, ast.Is, ast.IsNot, ast.Lt, ast.LtE, ast.NotEq and ast.NotIn should be subclasses of ast.cmpop
    - [ 1981 ] ast.And and ast.Or should be subclasses of ast.boolop
  New Features
    - [ 1896215 ] findResource(s) for SyspathJavaLoader
    - [ 1591 ] Interactive interpreter stuck on '...' loop
    - Added socket reboot work, using Netty 4 to fully support socket, select, and ssl API

Jython 2.7b2
  Bugs Fixed